--- a/Sign in and sign up form/style.css
+++ b/Sign in and sign up form/style.css
@@ -1,106 +1,105 @@
 
-/* body{
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
     height: 100vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     display: flex;
     font-family: sans-serif;
+    background-image: url('img.jpg');
     
-} */
+    
+}
     
 h1{
     font-size: 2.2rem;
-    font-weight: 600;
-    text-shadow: 1px 1px black;
+    color: white;
+    font-weight: 600;   
+    margin-left: 120px;
+    margin-bottom: 30px;
 }
 
 i{
-    color:grey;
+    color:white; 
+    right: 50px;  
+    top:50%;
+    font-size: 20px;
     position: relative;
-    margin-right: -40px;
+}
+
+.username,.password{
+    color:white;
+    padding-left: 40px;
+    outline: none;
+}
+
+.container{
+    height:380px;
+    width:350px;
+    border: 1px solid grey;
+    padding: 20px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+
 }
 input{
-    width:300px;
-    height:35px;
-    background-color: rgb(222, 222, 222);
+    width:270px;
+    height:30px;
     border: 1px solid  rgb(222, 222, 222);
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     border-radius: 25px;
     padding: 8px;
     font-size: 16px;
     font-weight: 300;
+    color: black;
+    background: transparent;
+    backdrop-filter: blur(20%);
     
 }
-.username,.password,.email{
-    padding-left: 50px;
-    font-weight: 400;
-    text-shadow: 1px  grey;
-}
-a{
-    color:black;
-    text-decoration: none;
-    font-size: 20px;
-    align-items: center;
-    
-   
-   
-}
-a:hover{
-   color: #20dbc2;
-}
-#circle{
-    height: 20px;
-    width: 20px;
-    border: 1px solid black;
-    border-radius: 200px;
-    padding: 15px;
-    margin: 5px;
-    align-items: center;
-    
+input::placeholder{
+    color:white;
 }
 .btn{
-    background-color: #20dbc2;
+    background-color: white;
     height: 50px;
-    width: 120px;
+    width: 320px;
     border: none;
     border-radius: 25px;
-    color:white;
+    color:black;
     font-size: 16px;
     font-weight: 300;
     margin-left: 5px;
+    margin-bottom: 25px;
+    cursor: pointer;
 }
-.sign-in{
-    position:absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%,-50%);
-    display: grid;
-    grid-template-columns: 1fr;
+.box{
+    height:15px;
+    width: 15px;
+    background-color: white;
+    color: white;
+    margin-right: 10px;   
+    
 }
-form{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    grid-column: 1/2;
-    grid-row: 1/2;
+a{
+    color: white;
+    text-decoration: none;
 }
-form.sign-in{
-    z-index:2;
+a:hover{
+    text-decoration:underline;
 }
-.sign-up{
-    z-index: 1;
-    opacity: 0;
+label{
+    color:white;
+    margin-right: 60px;
 }
-.container::before{
-    content: '';
-    position: absolute;
-    height:2000px;
-    width:2000px;
-    top:-10%;
-    right:48%;
-    background-image:linear-gradient(-45deg, #20dbc2 0%, #00bfa6 100%) ;
-    transform:translateY(-50%);
-    border-radius: 50%;
+.btn:hover{
+    background-color:#cd4a73;
+    color: white;
+}
+p{
+    color: white;
+    margin-left:50px;
 }
