--- a/Sign in and sign up form/style.css
+++ b/Sign in and sign up form/style.css
@@ -56,7 +56,7 @@ input{
     font-size: 16px;
     font-weight: 300;
     color: black;
-    background: transparent;
+    background: transparent 20%;
     backdrop-filter: blur(20%);
     
 }
