icode day 3 challenge

--- a/Glassmorphism login form/style.css
+++ b/Glassmorphism login form/style.css
@@ -11,6 +11,7 @@ body{
     display: flex;
     font-family: sans-serif;
     background-image: url('img.jpg');
+    background-size: cover;
     
     
 }
